--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url('/assets/images/bg.png');
+    background-image: url("./assets/images/bg.png");
     background-size: cover;
     font-family: 'Montserrat', sans-serif;
     line-height: 1.5;
