--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -172,6 +172,9 @@ img {
     display:flex;
     flex-direction: column;
     flex: wrap;
+    width: 350px;
+    background: transparent;
+    border: none;
 }
 
 .card img {
@@ -205,7 +208,7 @@ img {
         display: block;
         position: absolute;
         background-color: transparent;
-        background-image: url(/users/slach/UT_Bootcamp/SLachelier_Portfolio/assets/images/icon-hamburger.svg);
+        background-image: url(/assets/images/icon-hamburger.svg);
         background-repeat: no-repeat;
         width: 2rem;
         border: 0;
@@ -216,7 +219,7 @@ img {
     }
 
     .mobile-nav-toggle[aria-expanded="true"] {
-        background-image: url(/users/slach/UT_Bootcamp/SLachelier_Portfolio/assets/images/icon-close.svg);
+        background-image: url(/assets/images/icon-close.svg);
         z-index: 10000;
     }
 }
@@ -239,21 +242,74 @@ img {
         
     .glass {
         width: 100%;
-        display: block;
+        display: flex;
         margin-left: .2rem;
+        flex-wrap: wrap;
+
     }
     .info {
-        width: 100%;
         padding-left: 0;
         margin-left: 20px;
         align-content: center;
+        width: 100%;
+    }
+
+    .info img {
+        width: 250px;
+        height: 250px;
+        justify-content: center;
+        margin-left: 1rem;
+    }
+    .info h2, .info h3 {
+        text-align: center;
+    }
+    .info p, .info a {
+        width: 100%;
+        text-align: center;
     }
 
     .cards {
         align-content: center;
-        padding-left: 100px;
+        justify-content: center;
     }
     
 }
 
+@media (min-width: 688px) and (max-width: 956px) {
+    .glass {
+        justify-content: center;
+        width: 100vw;
+    }
+    .info {
+        align-items: center;
+    }
+    .info img {
+        margin-left: 0rem;
+        width: 225px;
+        height: 225px;
+    }
+}
 
+@media (min-width: 300px) and (max-width: 688px) {
+    .glass {
+        display: block;
+        width: 96vw;
+        margin-left: .3rem;
+        align-items: center;
+        align-content: center;
+    }
+
+    .info {
+        align-items: center;
+        align-self: center;
+        max-width: fit-content;
+    }
+
+    .cards {
+        max-width: fit-content;
+        align-items: center;
+        align-self: center;
+        width: 100%;
+    }
+
+}
