--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -140,6 +140,10 @@ img {
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
     filter: opacity(60%);
 }
+.info img:hover {
+    transition: .6s ease-in-out;
+    filter: opacity();
+}
 
 .info h2, .info h3 {
     padding: .5rem;
@@ -184,6 +188,15 @@ img {
     filter: opacity(70%);
 }
 
+.card:hover {
+    filter: opacity();
+    transition: .5s ease-out;
+    transform: scale(105%);
+}
+.card img:hover {
+    filter: opacity();
+}
+
 .card p {
     width: 300px;
 }
@@ -210,6 +223,8 @@ img {
         background-color: transparent;
         background-image: url(/assets/images/icon-hamburger.svg);
         background-repeat: no-repeat;
+        background-size: 100%;
+        filter: invert();
         width: 2rem;
         border: 0;
         aspect-ratio: 1;
@@ -221,6 +236,7 @@ img {
     .mobile-nav-toggle[aria-expanded="true"] {
         background-image: url(/assets/images/icon-close.svg);
         z-index: 10000;
+        filter: invert(0%);
     }
 }
 
@@ -256,7 +272,7 @@ img {
 
     .info img {
         width: 250px;
-        height: 250px;
+        height: 325px;
         justify-content: center;
         margin-left: 1rem;
     }
@@ -285,8 +301,8 @@ img {
     }
     .info img {
         margin-left: 0rem;
-        width: 225px;
-        height: 225px;
+        width: 250px;
+        height: 325px;
     }
 }
 
