--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -221,7 +221,7 @@ img {
         display: block;
         position: absolute;
         background-color: transparent;
-        background-image: url(/assets/images/icon-hamburger.svg);
+        background-image: url('../images/icon-hamburger.svg');
         background-repeat: no-repeat;
         background-size: 100%;
         filter: invert();
@@ -234,7 +234,7 @@ img {
     }
 
     .mobile-nav-toggle[aria-expanded="true"] {
-        background-image: url(/assets/images/icon-close.svg);
+        background-image: url('../images/icon-close.svg');
         z-index: 10000;
         filter: invert(0%);
     }
