--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -101,6 +101,7 @@ img {
 .primary-navigation a {
     text-decoration: none;
     color: lightgrey;
+    font-size: large;
 }
 
 .primary-navigation a > [aria-hidden="true"] {
@@ -132,26 +133,10 @@ img {
     font-weight: 200px;
     flex: 1;
     margin: 4.1rem 2rem 4rem 2rem;
-    width: 200px;
+    width: 400px;
     max-width: 30%;
-}
-.info img {
-    width: 400px;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-    filter: opacity(60%);
-}
-.info img:hover {
-    transition: .6s ease-in-out;
-    filter: opacity();
-}
-
-.info h2, .info h3 {
-    padding: .5rem;
-}
-
-.info p, .info a {
     text-align: center;
-    width: 400px;
+    padding: .5rem;
 }
 
 .portfolio {
